# metaphysics

./: Cargo.toml  README.md
examples/: bounce.rs  bouncing_ball.rs  coupled_oscillators.rs  driven_oscillator.rs  duffing.rs  pendulum.rs  van_der_pol.rs
geom2/: Cargo.toml
geom2/src/: circle.rs  half_plane.rs  lib.rs  line.rs  plane.rs  polygon.rs
src/: algebra.rs  euler.rs  lib.rs  numerical.rs  param.rs  physics.rs  rk4.rs  rot.rs  var.rs
